--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 DB_URL=mongodb+srv://eazotel:admin@cluster0.p0kewzl.mongodb.net/
+PORT=2828
+
+TWILIO_ACCOUNT_SID=123123213
+TWILIO_AUTH_TOKEN=123213
+TWILIO_NUMBER=12345567890
